<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4f4f4f"
    android:orientation="vertical"
    tools:context="com.gr.ui.topup.TopUpActivity" >

    <TextView
        android:id="@+id/tv_topbar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#ff1111"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/topup" />

    <android.support.v4.view.ViewPager
        android:id="@+id/vp_1"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="0dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#fff"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/bt_bottombar_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:text="@string/topup_tag_account" />

        <Button
            android:id="@+id/bt_bottombar_topup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:text="@string/topup_tag" />

        <Button
            android:id="@+id/bt_bottombar_transcation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:text="@string/topup_tag_transaction" />
    </LinearLayout>

</LinearLayout>