<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#8e8e8e"
    tools:context="sun.gr.com.topup.AccountFragment">

    <LinearLayout
        android:id="@+id/ll_topup1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:id="@+id/tv_input_numberinfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/topup_info"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/ll_input_numberinfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/topup_tag_number"
                android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/et_topup_input_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:singleLine="true"
                android:textColor="#000" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_input_money"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/topup_tag_denomination"
                android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/et_topup_input_money"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:singleLine="true"
                android:text="$"
                android:textColor="#000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_eTopUp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/shape"
                android:text="@string/topup_tag_etopup" />

            <Button
                android:id="@+id/bt_eVoucher"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/shape"
                android:text="@string/topup_tag_evoucher" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
